<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">spoiq-auth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_create_new_account">Create new account</string>
    <string name="text_log_in">Log in</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="text_hint_pwd">Password</string>
    <string name="text_btn_create">Create</string>
    <string name="text_reset_password_help">To reset your password, please enter your email and press continue</string>
    <string name="text_button_continue">Continue</string>
    <string name="text_button_cancel">Cancel</string>

</resources>
