<?xml version="1.0" encoding="utf-8"?>

<io.github.spoiq_auth_module.views.ResetPasswordView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bec9cc"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_reset_password_help_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_reset_password_help"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/edit_reset_email_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_reset_password_help_label"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        whatever:testType="email" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_reset_email_field"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_button_continue" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_continue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_button_cancel" />
</io.github.spoiq_auth_module.views.ResetPasswordView>